--- a/service/pom.xml
+++ b/service/pom.xml
@@ -35,16 +35,16 @@
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
             </dependency>
-            &lt;!&ndash;服务注册&ndash;&gt;
+            &lt;!&ndash;服务注册&ndash;&gt;-->
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
             </dependency>
-            &lt;!&ndash;服务调用&ndash;&gt;
+            <!--服务调用-->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-openfeign</artifactId>
-            </dependency>-->
+            </dependency>
         <!--Spring-web-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
