--- a/service/service-edu/src/main/resources/application.yml
+++ b/service/service-edu/src/main/resources/application.yml
@@ -2,7 +2,6 @@
 server:
   port: 8001
 
-
 spring:
   application:
     # 服务名
@@ -28,6 +27,15 @@ spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
+
+    #微服务
+  cloud:
+    nacos:
+      server-addr: 192.168.141.128:8847
+      discovery:
+        username: nacos
+        password: nacos
+        namespace: public
 
 #MyBatisPlus全局配置
 mybatis-plus:
